# RTXHDR-RTXVSR

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  DISTRIBUTION_TERMS.txt  FRONTEND_INTEGRATION.md  LICENSE  PROJECT_CONTEXT.md  README.md  RTXVideoConverter.sln  THIRD_PARTY.md  THIRD_PARTY_LICENSES.md  build-minimal-ffmpeg.ps1  build-winui.ps1  generate-app-icon.ps1  generate-third-party-notices.ps1  package-release.ps1  vcpkg.json  verify-release-compliance.ps1
.github/workflows/: windows-ci.yml
app/docs/: architecture.md  build_windows.md  native_api.md  troubleshooting.md
app/flutter_app/: README.md  analysis_options.yaml  pubspec.yaml
app/flutter_app/lib/: main.dart
app/flutter_app/lib/app/: app.dart
app/flutter_app/windows/: CMakeLists.txt
app/native/: CMakeLists.txt
app/native/cmake/: Dependencies.cmake  FindNvidiaRtxVideoSdk.cmake  FindVideoCodecInterface.cmake  ProjectOptions.cmake
app/native/core/include/rtx/core/: logger.h  status.h  types.h  validation.h
app/native/core/src/: logger.cpp  validation.cpp
app/native/enhance/include/rtx/enhance/: enhancement_backend.h  sdk_bridge_runtime.h
app/native/enhance/src/: null_backend.cpp  nvidia_ngx_backend.cpp  sdk_cuda_sample_bridge.cpp
app/native/pipeline/include/rtx/pipeline/: job_manager.h  processing_pipeline.h
app/native/pipeline/src/: job_manager.cpp  processing_pipeline.cpp
app/native/platform/include/rtx/platform/: native_api.h  system_probe.h
app/native/platform/src/: native_api.cpp  system_probe.cpp
app/native/tests/: CMakeLists.txt
app/native/tests/data/: README.md
app/native/tests/integration/: probe_tests.cpp
app/native/tests/unit/: config_validation_tests.cpp
app/native/video_io/include/rtx/video_io/: ffmpeg_probe.h  ffmpeg_runtime.h
app/native/video_io/src/: ffmpeg_probe.cpp  ffmpeg_runtime.cpp
app/scripts/: bootstrap_windows.ps1  configure_native.ps1  fetch_ffmpeg.ps1  package_runtime.ps1  run_flutter_windows.ps1
backend/: CMakeLists.txt  README.md  vcpkg.json
backend/docs/superpowers/plans/: 2026-06-01-rtx-video-backend.md  2026-06-07-app-impacting-bugfixes.md
backend/src/api/: http_server.cpp  http_server.h  json_dto.cpp  json_dto.h
backend/src/app/: main.cpp
backend/src/core/: utf8_path.h
backend/src/jobs/: job_runner.cpp  job_store.cpp  job_store.h  job_types.h
backend/src/platform/: capabilities.cpp  capabilities.h  logging.cpp  path_encoding.h
backend/src/video/: fake_pipeline.cpp  fake_pipeline.h  media_probe_service.cpp  media_probe_service.h  video_pipeline.h
backend/src/video/ffmpeg/: ffmpeg_probe.cpp  ffmpeg_probe.h  ffmpeg_stream_utils.h  ffmpeg_transcode_pipeline.cpp  ffmpeg_transcode_pipeline.h
backend/src/video/rtx/: rtx_dx11_processor.cpp  rtx_processor.h
backend/tests/scripts/: hardware_smoke.ps1
backend/tests/unit/: capabilities_tests.cpp  ffmpeg_transcode_pipeline_tests.cpp  http_server_tests.cpp  job_request_tests.cpp  job_runner_tests.cpp  job_store_tests.cpp  json_dto_tests.cpp  media_probe_tests.cpp
cmake/: FindFFmpeg.cmake
docs/: NVIDIA_RELEASE_CHECKLIST.md  frontend-integration.md
docs/superpowers/plans/: 2026-06-01-rtx-video-backend.md  2026-06-03-tauri-frontend-integration.md
docs/superpowers/specs/: 2026-06-01-rtx-video-backend-design.md  2026-06-03-tauri-frontend-integration-design.md
frontend/: README.md
frontend/rtx-video-converter/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json
frontend/rtx-video-converter-winui/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  README.md  RTXVideoConverter.WinUI.csproj  app.manifest
frontend/rtx-video-converter-winui-core-tests/: BackendApiClientTests.cs  ConverterViewModelTests.cs  JobHistoryServiceTests.cs  RTXVideoConverter.Core.Tests.csproj  WindowPlacementStoreTests.cs
frontend/rtx-video-converter-winui-core/Models/: BackendModels.cs  PresentationModels.cs  WindowPlacementState.cs
frontend/rtx-video-converter-winui-core/Services/: AppDataPaths.cs  BackendApiClient.cs  BackendProcessService.cs  BackendSession.cs  Contracts.cs  IWindowPlacementStore.cs  JobHistoryService.cs  OutputLauncherService.cs  WindowPlacementStore.cs
frontend/rtx-video-converter-winui-core/ViewModels/: ConverterViewModel.cs  HistoryViewModel.cs  SettingsViewModel.cs
frontend/rtx-video-converter-winui/Behaviors/: FluentMotion.cs
frontend/rtx-video-converter-winui/Converters/: BackendStatusBrushConverter.cs  BooleanToVisibilityConverter.cs  JobStateTextConverter.cs
frontend/rtx-video-converter-winui/Services/: FilePickerService.cs  ThemeService.cs  WindowContext.cs
frontend/rtx-video-converter-winui/Styles/: ControlStyles.xaml  DesignTokens.xaml
frontend/rtx-video-converter-winui/Views/: HistoryPage.xaml  HistoryPage.xaml.cs  HomePage.xaml  HomePage.xaml.cs  SettingsPage.xaml  SettingsPage.xaml.cs
frontend/rtx-video-converter-winui/tools/: Capture-Window.ps1  New-VisualComparison.ps1
frontend/rtx-video-converter/scripts/: package-portable.ps1  prepare-tauri-sidecar.ps1  tauri-packaging-common.ps1
frontend/rtx-video-converter/src/: App.tsx  types.ts
frontend/rtx-video-converter/src-tauri/: Cargo.toml  tauri.conf.json
frontend/rtx-video-converter/src-tauri/capabilities/: default.json
frontend/rtx-video-converter/src-tauri/src/: lib.rs  main.rs
packaging/: README-portable.txt  RTXVideoConverter.iss
src/api/: http_server.cpp  http_server.h  json_dto.cpp  json_dto.h
src/app/: main.cpp
src/core/: build_anchor.cpp  result.h
src/jobs/: job_runner.cpp  job_runner.h  job_store.cpp  job_store.h  job_types.h
src/platform/: capabilities.cpp  capabilities.h  logging.h
src/video/: fake_pipeline.h  video_pipeline.h
src/video/ffmpeg/: ffmpeg_probe.cpp  ffmpeg_probe.h  ffmpeg_transcode_pipeline.cpp  ffmpeg_transcode_pipeline.h
src/video/rtx/: rtx_dx11_processor.h
tests/scripts/: hardware_smoke.ps1
tests/unit/: bootstrap_tests.cpp  capabilities_tests.cpp  job_request_tests.cpp  job_runner_tests.cpp  job_store_tests.cpp  json_dto_tests.cpp  logging_tests.cpp
(+45 files in other folders)
