[package]
name = "rtx-video-converter"
version = "0.1.1"
description = "RTX Video Converter"
authors = ["RTX Video Converter Contributors"]
edition = "2021"

[lib]
name = "rtx_video_converter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
